test/var.go
package test

var tt = 90

func add(a int, b int) int {
	return a + b
}

func show(a int) {
	b := 1
	var d int
	//c := b + d
	d = add(3, 4)
	//f := tt //error
	//c := a //error
}
